# simpleLogger

./: CMakeLists.txt  README.md  app.cpp  build.sh  configure.bat  configure.sh  simpleLogger.cpp  simpleLogger.h
